--- a/VK_Education_Django/templates/index.html
+++ b/VK_Education_Django/templates/index.html
@@ -1,13 +1,138 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
- <body>
- 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}StakL{% endblock %}
+  
+{% block content %}
+  <div class="col content">
+    <div class="d-flex gap-3 align-items-center">
+        <h1>New Questions</h1>
+        <a href="#">Hot Questions</a>
+    </div>
+    <div class="d-flex flex-column gap-3">
+        <div class="card w-100" style="width: 18rem;">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="border mb-2" style="height: 100px">
+                            <img src="jpg.jpg" alt="Avatar" class="img-fluid">
+                        </div>
+                        <input class="form-control" type="number" value="5" placeholder="Default input"
+                            aria-label="default input example">
+
+                    </div>
+                    <div class="col-9">
+
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up
+                            the bulk
+                            of the card's content.</p>
+
+                        <div class="d-flex gap-5">
+                            <a href="#" class="card-link">Answer (3)</a>
+                            <div>
+
+                                Tags:
+
+                                <a href="#" class="card-link">Another link</a>
+                                <a href="#" class="card-link">Another link</a>
+                                <a href="#" class="card-link">Another link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card w-100" style="width: 18rem;">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="border mb-2" style="height: 100px">
+                            <img src="jpg.jpg" alt="Avatar" class="img-fluid">
+                        </div>
+                        <input class="form-control" type="number" value="5" placeholder="Default input"
+                            aria-label="default input example">
+
+                    </div>
+                    <div class="col-9">
+
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up
+                            the bulk
+                            of the card's content.</p>
+
+                        <div class="d-flex gap-5">
+                            <a href="#" class="card-link">Answer (3)</a>
+                            <div>
+
+                                Tags:
+
+                                <a href="#" class="card-link">Another link</a>
+                                <a href="#" class="card-link">Another link</a>
+                                <a href="#" class="card-link">Another link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card w-100" style="width: 18rem;">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="border mb-2" style="height: 100px">
+                            <img src="jpg.jpg" alt="Avatar" class="img-fluid">
+                        </div>
+                        <input class="form-control" type="number" value="5" placeholder="Default input"
+                            aria-label="default input example">
+
+                    </div>
+                    <div class="col-9">
+
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up
+                            the bulk
+                            of the card's content.</p>
+
+                        <div class="d-flex gap-5">
+                            <a href="#" class="card-link">Answer (3)</a>
+                            <div>
+
+                                Tags:
+
+                                <a href="#" class="card-link">Another link</a>
+                                <a href="#" class="card-link">Another link</a>
+                                <a href="#" class="card-link">Another link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <nav aria-label="Page navigation example" class="mt-3">
+        <ul class="pagination">
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</div>
+{% endblock %}
+
+{% block member %}
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+{% endblock %}
