--- a/VK_Education_Django/templates/base.html
+++ b/VK_Education_Django/templates/base.html
@@ -13,28 +13,24 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <div class="d-flex w-100 justify-content-between align-items-center">
-                <a class="navbar-brand" href="#">Navbar</a>
-
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <a class="navbar-brand" href="#">StakL</a>
 
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success col-5" type="submit">Find Question</button>
                 </form>
 
-                <div class="d-flex gap-2">
-                    <img src="" alt="Avatar" class="img-thumbnail">
+                <div class="d-flex gap-3">
+                    {% block profileNavbar %}
+                        <img src="" class="object-fit-scale border rounded w-25 p-1" alt="Avatar" >
                     <div>
-                        <div>
-                            dr pepper
+                        <div class="fw-bold">
+                            Konda Dista
                         </div>
-                        <a href="#">settings</a>
-                        <a href="#">log out</a>
+                        <a href="#" class="btn-sm btn btn-outline-primary">Settings</a>
+                        <a href="#" class="btn-sm btn btn-outline-danger">Log out</a>
                     </div>
+                    {% endblock %}
                 </div>
             </div>
         </div>
@@ -50,14 +46,14 @@
                 <section class="mb-3">
                     <h2>Popular Tags</h2>
                     <div>
-                        <span class="badge text-bg-primary">Primary</span>
-                        <span class="badge text-bg-secondary">Secondary</span>
-                        <span class="badge text-bg-success">Success</span>
-                        <span class="badge text-bg-danger">Danger</span>
-                        <span class="badge text-bg-warning">Warning</span>
-                        <span class="badge text-bg-info">Info</span>
-                        <span class="badge text-bg-light">Light</span>
-                        <span class="badge text-bg-dark">Dark</span>
+                        <button class="badge text-bg-primary">Primary</button>
+                        <button class="badge text-bg-secondary">Secondary</button>
+                        <button class="badge text-bg-success">Success</button>
+                        <button class="badge text-bg-danger">Danger</button>
+                        <button class="badge text-bg-warning">Warning</button>
+                        <button class="badge text-bg-info">Info</button>
+                        <button class="badge text-bg-light">Light</button>
+                        <button class="badge text-bg-dark">Dark</button>
                     </div>
                 </section>
 
@@ -65,11 +61,11 @@
                     <h2>Best members</h2>
                     <div>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><a href="#">Member</a>
-                            <li class="list-group-item"><a href="#">Member</a></li>
-                            <li class="list-group-item"><a href="#">Member</a></li>
-                            <li class="list-group-item"><a href="#">Member</a></li>
-                            <li class="list-group-item"><a href="#">Member</a></li>
+                            <li class="list-group-item"><a href="#">Mr.Freeman</a>
+                            <li class="list-group-item"><a href="#">Dr.House</a></li>
+                            <li class="list-group-item"><a href="#">Bender</a></li>
+                            <li class="list-group-item"><a href="#">QueenVIctori</a></li>
+                            <li class="list-group-item"><a href="#">Delor</a></li>
                         </ul>
                     </div>
                 </section>
