--- a/VK_Education_Django/templates/searchQuestion.html
+++ b/VK_Education_Django/templates/searchQuestion.html
@@ -5,8 +5,7 @@
 {% block content %}
   <div class="col content">
     <div class="d-flex gap-3 align-items-center">
-        <h1>New Questions</h1>
-        <a href="#">Hot Questions</a>
+        <h1>Tag: Bender</h1>
     </div>
     <div class="d-flex flex-column gap-3">
         <div class="card w-100" style="width: 18rem;">
@@ -43,7 +42,6 @@
                 </div>
             </div>
         </div>
-
         <div class="card w-100" style="width: 18rem;">
             <div class="card-body">
                 <div class="row">
