--- a/VK_Education_Django/templates/logIn.html
+++ b/VK_Education_Django/templates/logIn.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %}
+{% extends "layouts/base.html" %}
 
 {% block title %}StakL{% endblock %}
 
 {% block profileNavbar %}
     <div>
-        <a href="#" class="btn-sm btn btn-outline-primary">Settings</a>
-        <a href="#" class="btn-sm btn btn-outline-danger">Log out</a>
+        <a href="{% url 'logIn' %}" class="btn-sm btn btn-outline-success">Log In</a>
+        <a href="{% url 'registration' %}" class="btn-sm btn btn-outline-primary">Registration</a>
     </div>
 {% endblock %}
 
@@ -38,8 +38,8 @@
                 <div class="row mb-3">
                     <a class="col-sm-2 col-form-label"></a>
                     <div class="col-sm-2 vstack gap-2 col-md-5 mx-auto">
-                        <button class="col-sm-5 btn btn-success" type="logIn">Log In</button>
-                        <button class="col-sm-5 btn btn-outline-info">Registration</button>
+                        <a class="col-sm-5 btn btn-success" type="logIn">Log In</a>
+                        <a class="col-sm-5 btn btn-outline-info" href="{% url 'registration' %}">Registration</a>
                     </div>
                 </div>
             </form>
