--- a/VK_Education_Django/templates/hot.html
+++ b/VK_Education_Django/templates/hot.html
@@ -5,8 +5,8 @@
 {% block content %}
     <div class="col content">
         <div class="d-flex gap-3 align-items-center">
-            <h1>New Questions</h1>
-            <a href="{% url 'hotQuestion' %}">Hot Questions</a>
+            <h1>Hot Questions</h1>
+            <a href="{% url 'index' %}">New Questions</a>
         </div>
         <div class="d-flex flex-column gap-3">
             {% for question in questions %}
@@ -14,7 +14,7 @@
             {% endfor %}
 
         </div>
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" class="mt-3">
             {% include 'layouts/pagination.html' %}
         </nav>
     </div>
