--- a/VK_Education_Django/templates/layouts/base.html
+++ b/VK_Education_Django/templates/layouts/base.html
@@ -6,14 +6,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Base{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <div class="d-flex w-100 justify-content-between align-items-center">
-                <a class="navbar-brand" href="#">StakL</a>
+                <a class="navbar-brand" href="{% url 'index' %}">StakL</a>
 
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -27,8 +27,8 @@
                         <div class="fw-bold">
                             Konda Dista
                         </div>
-                        <a href="#" class="btn-sm btn btn-outline-primary">Settings</a>
-                        <a href="#" class="btn-sm btn btn-outline-danger">Log out</a>
+                        <a href="{% url 'userProfile' "Konda Dista"%}" class="btn-sm btn btn-outline-primary">Settings</a>
+                        <a href="{% url 'logIn' %}" class="btn-sm btn btn-outline-danger">Log out</a>
                     </div>
                     {% endblock %}
                 </div>
