--- a/VK_Education_Django/templates/question.html
+++ b/VK_Education_Django/templates/question.html
@@ -1,11 +1,10 @@
-{% extends "base.html" %}
+{% extends "layouts/base.html" %}
 
 {% block title %}StakL{% endblock %}
 
 {% block content %}
     <div class="col content ">
         <div class="gap-3">
-
             <div class="pt-3 pb-2">
                 <div class="w-100" style="width: 18rem;">
                     <div class="">
@@ -44,62 +43,17 @@
             </div>
 
             <div class="d-flex flex-column gap-3 border-3 border border-start-0 border-end-0 border-warning-subtle pt-4 pb-4">
-                <div class="card w-100" style="width: 18rem;">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-2">
-                                <div class="object-fit-scale border rounded p-1 border me-3 mb-2"
-                                     style="width: 4.5rem; height: 4.5rem">
-                                    <img src="" alt="Avatar" class="img-fluid">
-                                </div>
-                                <input class="form-control" type="number" value="5" placeholder="Default input"
-                                       aria-label="default input example" style="width: 4.5rem">
-                            </div>
-                            <div class="col-10 row gap-4">
-                                <label class="card-text col-12 align-self-start">Some quick example text to build on the
-                                    card title and make up the bulk of the card's content. Some quick example text to
-                                    build on the
-                                    card title and make up the bulk of the card's content.</label>
-                                <div class="col align-self-end">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault">Answer</label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card w-100" style="width: 18rem;">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-2">
-                                <div class="object-fit-scale border rounded p-1 border me-3 mb-2"
-                                     style="width: 4.5rem; height: 4.5rem">
-                                    <img src="" alt="Avatar" class="img-fluid">
-                                </div>
-                                <input class="form-control" type="number" value="5" placeholder="Default input"
-                                       aria-label="default input example" style="width: 4.5rem">
-                            </div>
-                            <div class="col-10 row gap-4">
-                                <label class="card-text col-12 align-self-start">Some quick example text to build on the
-                                    card title and make up the bulk of the card's content.</label>
-                                <div class="col align-self-end">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault">Answer</label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% for answer in answers %}
+                    {% include 'layouts/cardAnswer.html' %}
+                {% endfor %}
+                {% include 'layouts/pagination.html' %}
             </div>
 
             <div class="d-flex flex-column gap-3 pt-3">
                 <div class="col row">
                     <div>
-                    <textarea class="form-control" id="exampleFormControlAnswerArea" rows="7" placeholder="Enter your answer here..."></textarea>
+                        <textarea class="form-control" id="exampleFormControlAnswerArea" rows="7"
+                                  placeholder="Enter your answer here..."></textarea>
                     </div>
                 </div>
                 <div class="col align-self-start">
