--- a/VK_Education_Django/templates/index.html
+++ b/VK_Education_Django/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 {% load static %}
-{% block title %}StakL{% endblock %}
+{% block title %}StackL{% endblock %}
 
 {% block content %}
     <div class="col content">
