--- a/VK_Education_Django/templates/layouts/base.html
+++ b/VK_Education_Django/templates/layouts/base.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <div class="d-flex w-100 justify-content-between align-items-center">
-                <a class="navbar-brand" href="{% url 'index' %}">StakL</a>
+                <a class="navbar-brand" href="{% url 'index' %}">StackL</a>
 
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
