--- a/VK_Education_Django/templates/logIn.html
+++ b/VK_Education_Django/templates/logIn.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %}StakL{% endblock %}
+{% block title %}StackL{% endblock %}
 
 {% block profileNavbar %}
     <div>
