Added DB, added sheme application

--- a/VK_Education_Django/templates/layouts/base.html
+++ b/VK_Education_Django/templates/layouts/base.html
@@ -52,8 +52,8 @@
                         <button class="badge text-bg-danger">Danger</button>
                         <button class="badge text-bg-warning">Warning</button>
                         <button class="badge text-bg-info">Info</button>
-                        <button class="badge text-bg-light">Light</button>
-                        <button class="badge text-bg-dark">Dark</button>
+                        <a class="badge text-bg-light" href="{% url 'searchByTagQuestion' "WEB" %}">WEB</a>
+                        <a class="badge text-bg-light" href="{% url 'searchByTagQuestion' "Python" %}">Python</a>
                     </div>
                 </section>
 
