--- a/VK_Education_Django/templates/layouts/cardQuestion.html
+++ b/VK_Education_Django/templates/layouts/cardQuestion.html
@@ -17,15 +17,14 @@
                     <a href="{% url 'question' question.id %}">{{ question.title }}</a>
                 </h4>
                 <div class="col-12 row gap-3">
-                    <label class="card-text col-12 align-self-start">{{ question.text }}</label>
+                    <label class="card-text col-12 align-self-start">{{ question.description }}</label>
                     <div class="col align-self-end d-flex gap-3">
-                        <a href="#" class="card-link col-3">Answer (3)</a>
+                        <label class="card-text col-3">Answer ({{ question.num_answers }})</label>
                         <div>
                             Tags:
-                            <a href="#" class="card-link">Tag</a>
-                            <a href="#" class="card-link">Tag</a>
-                            <a href="#" class="card-link">Tag</a>
-                            <a href="#" class="card-link">Tag</a>
+                            {% for tag in questionItem.tags %}
+                                <a class="badge text-bg-light" href="{% url 'searchByTagQuestion' tag.name %}" >{{ tag.name }}</a>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
