--- a/VK_Education_Django/templates/question.html
+++ b/VK_Education_Django/templates/question.html
@@ -3,7 +3,7 @@
 {% block title %}StackL{% endblock %}
 
 {% block content %}
-    <div class="col content ">
+    <div class="col-9 content ">
         <div class="gap-3">
             <div class="pt-3 pb-2">
                 <div class="w-100" style="width: 18rem;">
