--- a/VK_Education_Django/templates/hot.html
+++ b/VK_Education_Django/templates/hot.html
@@ -3,7 +3,7 @@
 {% block title %}StackL{% endblock %}
 
 {% block content %}
-    <div class="col content">
+    <div class="col-9 content">
         <div class="d-flex gap-3 align-items-center">
             <h1>Hot Questions</h1>
             <a href="{% url 'index' %}">New Questions</a>
