--- a/VK_Education_Django/templates/components/cardQuestion.html
+++ b/VK_Education_Django/templates/components/cardQuestion.html
@@ -19,7 +19,7 @@
                 <div class="col row gap-3">
                     <label class="col align-self-start">{{ question.description }}</label>
                     <div class="col align-self-end d-flex gap-3">
-                        <label class="card-text col-3">Answer ({{ question.num_answers }})</label>
+                        <label class="card-text col-3">Answer ({{ question.answer_count }})</label>
                         <div>
                             Tags:
                             {% for tag in question.tags.all %}
