--- a/VK_Education_Django/templates/hot.html
+++ b/VK_Education_Django/templates/hot.html
@@ -10,12 +10,12 @@
         </div>
         <div class="d-flex flex-column gap-3">
             {% for question in questions %}
-                {% include 'layouts/cardQuestion.html' %}
+                {% include 'components/cardQuestion.html' %}
             {% endfor %}
 
         </div>
         <nav aria-label="Page navigation" class="mt-3">
-            {% include 'layouts/pagination.html' %}
+            {% include 'components/pagination.html' %}
         </nav>
     </div>
 {% endblock %}
