--- a/VK_Education_Django/templates/question.html
+++ b/VK_Education_Django/templates/question.html
@@ -40,9 +40,9 @@
 
             <div class="d-flex flex-column gap-3 border-3 border border-start-0 border-end-0 border-warning-subtle pt-4 pb-4">
                 {% for answer in answers %}
-                    {% include 'layouts/cardAnswer.html' %}
+                    {% include 'components/cardAnswer.html' %}
                 {% endfor %}
-                {% include 'layouts/pagination.html' %}
+                {% include 'components/pagination.html' %}
             </div>
 
             <div class="d-flex flex-column gap-3 pt-3">
